--- a/style.css
+++ b/style.css
@@ -1,25 +1,33 @@
+:root {
+    --mist: rgba(122, 161, 164, 0.811);
+    --fog: rgba(202, 231, 234, 0.811);
+    --branch: rgba(168, 223, 155, 0.751);
+    --tree: rgba(80, 123, 70, 0.664);
+    --trunk: rgba(29, 49, 25, 0.664);
+    --shadow: rgba(22, 33, 23, 0.664);
+}
+
 * {
-   
+   background-color: var(--mist);
 }
 header {
-    display: inline-flex;
+    display: flex;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     /* color: rgb(61, 5, 61); */
-    color:rgb(29, 99, 99);
-    background-color: rgb(7, 50, 50);
+    color: var(--tree);
 }
 img {
-    display: inline;
+    display: flex;
+    width: 90px;
+    border-radius: 50%;
+    position: fixed;
 }
 #tiff h1{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     /* color: rgb(61, 5, 61); */
-    color:rgb(29, 99, 99);
-    background-color: rgb(7, 50, 50);
-    font-display: ;
-}
-
-img {
-    width: 100px;
-    border-radius: 50%;
+    color: var(--shadow);
+    font-display: flex;
+    position: fixed;
+    left: 100px;
+    padding: 10px;
 }
