added a second work sample

--- a/style.css
+++ b/style.css
@@ -81,3 +81,9 @@ header {
     color: var(--trunk);
 }
 
+#holder {
+    display: flex;
+    width: 200px;
+    height: 200px;
+    border-radius: 5px;
+}
